2009-03-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/aac/wizard_gtk.py:
	Remove the informative message when the libstdc++5 check is done.
	* flumotion/component/muxers/mp3/Makefile.am:
	* flumotion/component/muxers/mp3/__init__.py:
	* flumotion/component/muxers/mp3/mp3.py:
	Apparently the new files added on the last commit had the same
	content twice. Deleting these duplicated contents.

2009-03-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jlegoff

	* configure.ac:
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/muxers/mp3 (added):
	* flumotion/component/muxers/mp3/__init__.py (added):
	* flumotion/component/muxers/mp3/mp3.py (added):
	* flumotion/component/muxers/mp3/Makefile.am (added):
	* flumotion/component/muxers/mp3/mp3.xml (added):
	New muxer to allow mp3 audio without a container. It actually does
	nothing to the stream and acts as an identity component.
	Fixes #2074

2009-02-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/mp3/wizard_gtk.py:
	Increase the allowed range for the bitrate to 320 kbps.
	Fixes #2874

2009-02-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jlegoff

	* flumotion/component/encoders/aac/wizard_gtk.py:
	Block the next step when the libstdc++5 is not installed on the
	worker. Fixes #2075

2009-02-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* Makefile.am:
	Include the rules to build rpm packages.
	* flumotion-flash.spec.in:
	Added a dependency to gstreamer-fluendo-mcaacenc
	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/aac/wizard_gtk.py:
	* flumotion/component/encoders/flv/admin_gtk.py:
	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/mp3/wizard_gtk.py:
	* flumotion/component/encoders/vp6/vp6.py:
	* flumotion/component/encoders/vp6/wizard_gtk.py: